// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPage direction can be row 1`] = `
<div
  class="euiPageT css-6mtby6-euiPage-row-grow"
/>
`;

exports[`EuiPage grow can be false 1`] = `
<div
  class="euiPageT css-be0zyb-euiPage-row"
/>
`;

exports[`EuiPage is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPageT testClass1 testClass2 css-6mtby6-euiPage-row-grow"
  data-test-subj="test subject string"
/>
`;
